--- a/margine.css
+++ b/margine.css
@@ -1,16 +1,33 @@
 .box1 {
     width: 100px;
     height: 100px;
-    background-color: navajowhite;
-    border: 1px solid black;
+    background-color: rgb(232, 225, 215);
+    border: 5px solid black;
     margin: 20px;
     padding: 20px;
+    position: relative;
 }
 
 .box2 {
     width: 50px;
     height: 50px;
-    background-color: #4f0303;
+    border-radius: 50px;
+    background-color: #190303;
     border: 1px solid black;
-    margin: 20px;
+    margin: 0;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+.box3 {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #030303;
+    border: 1px solid black;
+    margin: 0;
+    position: absolute;
+    top: 80px;
+    left: 80px;
 }
